# Mongo-Aggregation-Bot

./: .env.docker  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: aggregator.py  answers.py  config.py  db.py  handlers.py  main.py  models.py  test_data.json  tests.py
