[tool.poetry]
name = "mongobot"
version = "0.1.0"
description = "Implementation of test task for RLT. Telegram bot that aggregates statistics stored in mongodb."
authors = ["Yue2u <beloleg225@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.5.0"
isort = "^5.13.2"
black = "^24.4.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
